# olscheck

./: example.ipynb  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: publish.yml
janrth/: __init__.py
janrth/replenishment_sim/: __init__.py  policies.py  replenishment_simulation.ipynb  simulation.py
olscheck/: __init__.py  ols_assumptions_check.py  original.py
olscheck/.ipynb_checkpoints/: data_generator-checkpoint.py  ols_assumptions_check-checkpoint.py
tests/: cooks_dist_line_test.py  cooks_distance_test.py  histogram_test.py  leverage_plot_test.py  leverage_res_studentized_test.py  ols_assumptions_test.py  qq_plot_test.py  residual_test.py  residuals_plot_test.py  scale_location_test.py  vif_test.py
