[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olscheck"
version = "0.1.7"
description = "A library to check OLS assumptions."
readme = "readme.md"
requires-python = ">=3.6"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "scikit-learn==1.4.2",
    "statsmodels==0.14.2",
    "scienceplots==2.1.1",
]

[dependency-groups]
test = [
    "pytest>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/janrth/olscheck"
